amendments to media query about

--- a/assets/css/nav.bar.css
+++ b/assets/css/nav.bar.css
@@ -2,7 +2,7 @@
 @media (min-width: 430px) and (max-width: 1000px) {
     
     /* Header Adjustments */
-    .header2 {
+    .header {
         padding: 10px 15px;
     }
 
