--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -1,4 +1,3 @@
-
 /* Google font import links */
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap');
@@ -36,6 +35,7 @@ header {
 /* Navigation */
 nav {
     display: flex;
+    align-items: center;
     justify-content: space-between;
     width: 100%;
 }
@@ -49,6 +49,9 @@ nav {
 }
 
 
+.nav-bar {
+    display: flex;
+}
 
 .nav-bar ul {
     display: flex;
@@ -82,6 +85,7 @@ nav {
 .nav-bar ul li a:hover::after {
     width: 100%;
 }
+
 
 
 /* Updated About Content */
