--- a/assets/css/nav.bar.css
+++ b/assets/css/nav.bar.css
@@ -98,9 +98,20 @@ main {
 }
 
 
+
 /* Media Query for devices with min-width 430px and max-width 1000px */
 @media (min-width: 430px) and (max-width: 1000px) {
-    
+    .destination-list {
+        grid-template-columns: repeat(1, 1fr); /* Display 1 item per row */
+    }
+
+    .destination-header h1 {
+        font-size: 32px;
+    }
+
+    .destination-header p {
+        font-size: 16px;
+    }
     nav .fa-xmark {
         display: block;
         color: #fff;
@@ -144,116 +155,14 @@ main {
         transition: 1s;
     }
 
-    /* About Content Adjustments */
-    .about-content {
-        padding: 20px;
-        margin: 120px auto;
-        max-width: 95%;
+    /* Paragraph text adjustment */
+    p {
+        font-size: 30px;
     }
 
-    .about-content h1 {
-        font-size: 1.8em;
+    
+
+    main {
+        padding: 20px; /* Add padding for better spacing */
     }
-
-    .about-content h2 {
-        font-size: 1.5em;
-    }
-
-    .about-content p {
-        font-size: 1.05em;
-    }
-
-    /* Image Gallery Adjustments */
-    .image-gallery {
-        padding: 40px 5%;
-    }
-
-    .gallery {
-        grid-template-columns: repeat(2, 1fr); /* 2 images per row on mobile */
-    }
-
-    .gallery img {
-        height: 150px;
-    }
-
-    /* Social Media Icons */
-    #social-networks {
-        margin-top: 20px;
-    }
-
-    #social-networks a {
-        font-size: 1.2rem;
-    }
-
-    /* Footer Adjustments */
-    footer {
-        padding: 15px 0;
-        font-size: 0.9rem;
-    }
-}
-/* Header */
-header {
-    background: linear-gradient(45deg, #1e73be, #0e0f0c);
-    color: #fff;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    padding: 15px 20px;
-    z-index: 1000;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
-}
-
-
-/* Navigation */
-nav {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
-}
-
-/* Logo styles */
-.logo {
-    font-size: 2em;
-    color: #fff;
-    font-family: 'Pacifico', cursive;
-    text-decoration: none;
-}
-
-
-.nav-bar {
-    display: flex;
-}
-
-.nav-bar ul {
-    display: flex;
-    list-style: none;
-    gap: 15px;
-}
-
-.nav-bar ul li a {
-    color: #fff;
-    font-weight: 600;
-    text-decoration: none;
-    transition: color 0.3s ease;
-}
-
-.nav-bar ul li a:hover {
-    color: #fff;
-}
-
-
-
-.nav-bar ul li a::after {
-    content: '';
-    width: 0;
-    height: 3px;
-    background: #ffcb74;
-    display: block;
-    margin: auto;
-    transition: width 0.4s;
-}
-
-.nav-bar ul li a:hover::after {
-    width: 100%;
 }
