about css 182-185 commented out

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -178,11 +178,13 @@ footer {
     box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
 }
 
-/* Mobile Navbar Icons */
+/* Mobile Navbar Icons 
 nav .fa-solid.fa-bars,
 nav .fa-solid.fa-xmark {
     display: none;
-}
+} */
+
+
 
 /* Media Query for devices with min-width 430px and max-width 1000px */
 @media (min-width: 430px) and (max-width: 1000px) {
