--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -113,7 +113,7 @@ nav {
 }
 .about-list li {
     font-size: 1.1em;
-    color: #1e73be;
+    color: #555;
     margin-bottom: 10px;
     padding-left: 35px;
     position: relative;
